# robot-interface-public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main_iam_robolib.cpp  make_iam_robolib.sh  old_CMakeLists.txt  test_robolib.cpp
Docker/: build_robot_client_docker_image.sh  (+4 more)
iam_robolib/: CMakeLists.txt
iam_robolib/include/iam_robolib/: SharedMemoryInfo.h  base_sensor_data_wrapper.h  definitions.h  feedback_controller_factory.h  file_stream_logger.h  robot_state_data.h  run_loop.h  run_loop_process_info.h  run_loop_shared_memory_handler.h  save_robot_state_data_to_shared_memory_buffer.h  sensor_data.h  sensor_data_manager.h  termination_handler_factory.h  trajectory_generator_factory.h
iam_robolib/include/ur_modern_driver/: pipeline.h
iam_robolib/proto/: CMakeLists.txt  sensor_msg.proto
iam_robolib/src/: BaseMetaSkill.cpp  BaseMetaSkill.h  BaseSkill.cpp  BaseSkill.h  ControlLoopData.cpp  ControlLoopData.h  CounterTerminationHandler.cpp  CounterTerminationHandler.h  CustomGainTorqueController.cpp  DMPTrajectoryGenerator.cpp  DMPTrajectoryGenerator.h  FeedbackController.cpp  FeedbackController.h  FeedbackControllerFactory.cpp  FeedbackControllerFactory.h  FileStreamLogger.cpp  FileStreamLogger.h  FinalJointTerminationHandler.cpp  FinalJointTerminationHandler.h  FinalPoseTerminationHandler.cpp  FinalPoseTerminationHandler.h  GripperOpenSkill.cpp  GripperOpenSkill.h  GripperOpenTrajectoryGenerator.cpp  GripperOpenTrajectoryGenerator.h  JointPoseContinuousSkill.cpp  JointPoseContinuousSkill.h  JointPoseSkill.cpp  JointPoseSkill.h  JointPoseWithTorqueControlSkill.cpp  JointPoseWithTorqueControlSkill.h  JsonFileLogger.cpp  JsonFileLogger.h  LinearJointTrajectoryController.cpp  LinearJointTrajectoryController.h  NoopFeedbackController.cpp  NoopFeedbackController.h  NoopTerminationHandler.cpp  NoopTerminationHandler.h  RunLoopLogger.cpp  (+66 more)
iam_robolib/src/FeedbackController/: CustomGainTorqueController.h  NoopFeedbackController.cpp  NoopFeedbackController.h  custom_gain_torque_controller.cpp  custom_gain_torque_controller.h  feedback_controller.h  noop_feedback_controller.cpp  noop_feedback_controller.h
iam_robolib/src/Skills/: BaseMetaSkill.h  JointPoseContinuousSkill.h  JointPoseWithTorqueControlSkill.h  base_meta_skill.cpp  base_meta_skill.h  base_skill.cpp  base_skill.h  force_torque_skill.cpp  force_torque_skill.h  gripper_open_skill.cpp  gripper_open_skill.h  joint_pose_continuous_skill.cpp  joint_pose_continuous_skill.h  joint_pose_skill.cpp  joint_pose_skill.h  joint_pose_with_torque_control_skill.cpp  joint_pose_with_torque_control_skill.h  save_trajectory_skill.cpp  save_trajectory_skill.h  skill_info.cpp  skill_info.h
iam_robolib/src/TerminationHandler/: FinalJointTerminationHandler.cpp  FinalJointTerminationHandler.h  FinalPoseTerminationHandler.cpp  FinalPoseTerminationHandler.h  NoopTerminationHandler.cpp  NoopTerminationHandler.h  contact_termination_handler.h  counter_termination_handler.cpp  counter_termination_handler.h  final_joint_termination_handler.cpp  final_joint_termination_handler.h  final_pose_termination_handler.cpp  final_pose_termination_handler.h  linear_trajectory_generator_with_time_and_goal_termination_handler.cpp  noop_termination_handler.cpp  noop_termination_handler.h  termination_handler.h
iam_robolib/src/TrajectoryGenerator/: DMPTrajectoryGenerator.h  dmp_trajectory_generator.cpp  dmp_trajectory_generator.h  gripper_open_trajectory_generator.cpp  gripper_open_trajectory_generator.h  impulse_trajectory_generator.cpp  impulse_trajectory_generator.h  linear_joint_trajectory_generator.cpp  linear_joint_trajectory_generator.h  linear_trajectory_generator_with_time_and_goal_termination_handler.h  relative_linear_trajectory_generator.cpp  trajectory_generator.h
iam_robolib/src/feedback_controller/: cartesian_impedance_feedback_controller.cpp  custom_gain_torque_controller.cpp  force_axis_impedence_feedback_controller.cpp  joint_impedance_feedback_controller.cpp  noop_feedback_controller.cpp  pass_through_feedback_controller.cpp  set_internal_impedance_feedback_controller.cpp  torque_feedback_controller.cpp
iam_robolib/src/skills/: base_meta_skill.cpp  base_skill.cpp  cartesian_pose_skill.cpp  force_torque_skill.cpp  gripper_open_skill.cpp  gripper_skill.cpp  impedance_control_skill.cpp  joint_pose_continuous_skill.cpp  joint_pose_skill.cpp  joint_pose_with_torque_control_skill.cpp  joint_position_continuous_skill.cpp  joint_position_dynamic_interp_skill.cpp  joint_position_skill.cpp  save_trajectory_skill.cpp  skill_info.cpp
iam_robolib/src/termination_handler/: contact_termination_handler.cpp  final_joint_termination_handler.cpp  final_pose_termination_handler.cpp  linear_trajectory_generator_with_time_and_goal_termination_handler.cpp  noop_termination_handler.cpp  termination_handler.cpp  time_termination_handler.cpp
iam_robolib/src/trajectory_generator/: dmp_trajectory_generator.cpp  goal_pose_dmp_trajectory_generator.cpp  gripper_trajectory_generator.cpp  impulse_trajectory_generator.cpp  joint_dmp_trajectory_generator.cpp  joint_trajectory_generator.cpp  linear_joint_trajectory_generator.cpp  linear_pose_trajectory_generator.cpp  linear_trajectory_generator.cpp  linear_trajectory_generator_with_time_and_goal.cpp  min_jerk_joint_trajectory_generator.cpp  min_jerk_pose_trajectory_generator.cpp  pose_dmp_trajectory_generator.cpp  pose_trajectory_generator.cpp  relative_linear_pose_trajectory_generator.cpp  relative_linear_trajectory_generator.cpp  relative_min_jerk_pose_trajectory_generator.cpp  relative_pose_trajectory_generator.cpp  sine_joint_trajectory_generator.cpp  sine_pose_trajectory_generator.cpp  stay_in_initial_pose_trajectory_generator.cpp  stay_in_initial_position_trajectory_generator.cpp  trajectory_generator.cpp
iam_robolib/src/utils/: logger_utils.cpp
iam_robolib_common/: CMakeLists.txt
iam_robolib_common/include/iam_robolib_common/: SharedMemoryInfo.h  definitions.h  run_loop_process_info.h  skill_state_info.h
iam_robolib_common/src/: SharedMemoryInfo.cpp  run_loop_process_info.cpp  skill_state_info.cpp
(+313 files in other folders)
